--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,4 @@
-
+<form method="POST" action="/checkout">
+    <p>Enter Item: <input type="text" id="item" name="item"></p>
+    <p><input type="submit" id="submit" name="submit"></p>
+</form>
